tried to remove srp